# 4ml

./: CMakeLists.txt  LICENSE  Makefile  README.md  README_EN.md
.github/workflows/: tests.yml
scripts/: install_gtest.sh
src/frame/: frame.h  frame_example.cpp  frame_test.cpp  ml.h  series.h  stats.h
src/frame/io/: csv_parser.h  json_parser.h
src/supervised/regression/linear_square_error/: linear_square_error.cpp  linear_square_error.h  linear_square_error_benchmark.cpp  linear_square_error_example.cpp  linear_square_error_test.cpp
src/tensor/: cpu_engine.cpp  cpu_engine.h  engine.h  tensor.h  tensor_benchmark.cpp  tensor_test.cpp
